changed app to functional component from class

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.words": [
         "larr",
         "noreferrer",
-        "rarr"
+        "rarr",
+        "setarticles",
+        "setpage"
     ]
 }
